--- a/README.Rmd
+++ b/README.Rmd
@@ -20,11 +20,11 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 This is a reimplementation of Shiny's navbarPage and tabset functions with more features and 
-flexibility for the developer defining the user interface.
+flexibility.
 
 ## Installation
 
-You can install shinyextensions from [GitHub](https://github.com/) with:
+You can install shinyextensions with:
 
 ``` r
 # install.packages("devtools")
