Changed package name to shinynavbar

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,20 +13,20 @@ knitr::opts_chunk$set(
 )
 ```
 
-# shinyextensions
+# shinynavbar
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 <!-- badges: end -->
 
-This is a reimplementation of Shiny's navbarPage and tabset functions with more features and 
+This is a reimplementation of Shiny's navbarPage and tabset functionality with more features and 
 flexibility.
 
 ## Installation
 
-You can install shinyextensions with:
+You can install shinynavbar with:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("markusdumke/shinyextensions")
+devtools::install_github("markusdumke/shinynavbar")
 ```
